--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
   "bugs": {
     "url": "https://github.com/JoshTeflon/repo-display/issues"
   },
-  "homepage": "https://github.com/JoshTeflon/repo-display#readme"
+  "homepage": "https://github.com/JoshTeflon/repo-display#readme",
+  "dependencies": {}
 }
